# devtoolkit

./: .gitignore  README.md  screenshots.ts
.github/workflows/: build.yml
dev-tool-front/: CLAUDE.md  Dockerfile  docker-build.sh  index.html  package.json  playwright.config.ts  playwright.http.config.ts  playwright.manual.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dev-tool-front/e2e/: .http-backend-state.json  .visual-state.json  calc-time.spec.ts  crypto-hash.spec.ts  encoding.spec.ts  json-tools.spec.ts  layout.spec.ts  remaining-tools.spec.ts  setup-http-backend.ts  test-cases.md
dev-tool-front/scripts/: css-audit.sh  dom-audit.sh  extract-structure.sh  generate-report.mjs  prototype-audit.py  prototype-audit.sh
dev-tool-front/src/: App.vue  env.d.ts  main.ts
dev-tool-front/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dev-tool-front/src-tauri/capabilities/: default.json
dev-tool-front/src-tauri/icons/: icon.icns
dev-tool-front/src-tauri/pkgconfig/: gio-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gobject-2.0.pc  gthread-2.0.pc
dev-tool-front/src-tauri/server/: Cargo.toml
dev-tool-front/src-tauri/server/src/: main.rs
dev-tool-front/src-tauri/src/: error.rs  lib.rs  main.rs
dev-tool-front/src-tauri/src/commands/: crypto.rs  http.rs  mod.rs  openssl.rs
dev-tool-front/src-tauri/src/types/: crypto.rs  http.rs  mod.rs  openssl.rs
docs/: api-interfaces.md  requirements-analysis.md  ui-structure.json  work-plan.md
docs/ui-html/: 01-main-framework.html  02-home.html  03-encoding.html  03b-base64.html  (+31 more)
(+156 files in other folders)
