[package]
name = "dev-toolkit"
version = "1.0.1"
description = "DevToolkit - Developer Tools Desktop App"
authors = ["DevToolkit"]
edition = "2021"
default-run = "devtoolkit"

[lib]
name = "devtoolkit_lib"
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "devtoolkit"
path = "src/main.rs"
required-features = ["tauri-mode"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
tauri = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
ring = "0.17"
rand = "0.8"
x509-parser = "0.16"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[features]
default = []
tauri-mode = ["dep:tauri", "dep:tauri-plugin-http", "dep:tauri-plugin-updater", "dep:tauri-build"]

[workspace]
members = ["server"]
